--- a/app/src/main/res/layout/fragment_worlds.xml
+++ b/app/src/main/res/layout/fragment_worlds.xml
@@ -1,5 +1,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,7 +10,47 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="514dp"
+        android:padding="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/bubbleBackground"
+        app:layout_constraintStart_toStartOf="@+id/recyclerViewWorlds"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/bubbleBackground"
+        android:layout_width="150dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="110dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/bubble_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
+
+    <TextView
+        android:id="@+id/bubbleText"
+        android:layout_width="125dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginBottom="46dp"
+        android:text="Aquí podrás explorar los mundos de Spyro"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/bubbleBackground"
+        app:layout_constraintTop_toTopOf="@+id/bubbleBackground" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
